Add .gitignore, change of project structure

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="daterangepicker.css" />
-    <link rel="stylesheet" href="spinner.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/daterangepicker.css" />
+    <link rel="stylesheet" href="css/spinner.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="container">
