Add CSS styles, update app functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <img
           src="./images/new-york-times.png"
-          alt="New York Tomes"
+          alt="New York Times"
           class="banner"
         />
         <div class="searchBox">
@@ -98,14 +98,21 @@
             </dd>
           </dl>
         </div>
-      </header>
-      <div class="output">
         <div class="lds-ripple">
           <div></div>
           <div></div>
         </div>
-        <main></main>
-      </div>
+      </header>
+      <main class="output">
+        <img
+          src="./images/nytimes-logo.png"
+          alt="New York Times logo"
+          class="nyt-logo"
+        />
+      </main>
+      <footer>
+        <p>TC-Code 2020</p>
+      </footer>
     </div>
 
     <script src="index.js"></script>
